# CarbonAI

./: .buildinfo  .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pypirc  .readthedocs.yml  CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  contact.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: code_lint_quality.yml  deploy_doc.yml
CarbonAImpact/: MagicPowerMeter.py  NvidiaPower.py  PowerGadget.py  PowerMeter.py  __init__.py  config.json  magic_power_meter.py  nvidia_power.py  power_gadget.py  power_meter.py  utils.py  version.py
CarbonAImpact/data/: ademe_energy_mix_by_country.csv
PyPowerGadget/: MagicPowerMeter.py  NvidiaPower.py  PowerGadget.py  PowerMeter.py  __init__.py  config.json  functions.py  mesure_power.py  powerLog.csv  settings.py  utils.py  version.py
_sources/: contact.rst.txt
_sources/about/: accuracy_efficiency.rst.txt
_sources/getting_started/: examples.rst.txt
about/: accuracy_efficiency.html  carbon_footprint.html  carbon_scale.html  index.html  server_power.html
carbonai/: __init__.py  magic_power_meter.py  power_gadget.py  power_meter.py
carbonai/data/: ademe_energy_mix_by_country.csv
docs/: README.md  make.py
docs/_templates/: class_ipython.rst
docs/source/: api_reference.rst  conf.py  data_information.rst  examples.rst  index.rst  installation.rst
examples/: Usage exemple.ipynb  config.json  usage_example.py
getting_started/: data_information.html  examples.html  index.html  installation.html
notebooks/: Usage exemple.ipynb
reference/: index.html  magic_power_meter.html  power_meter.html
reference/api/: carbonai.MagicPowerMeter.config.html  carbonai.MagicPowerMeter.cross_validation_lock.html  (+17 more)
scrapping/: processor_power_specifications.csv
tests/: test_PowerGadget.py  test_PowerMeter.py
(+41 files in other folders)
