[tool.poetry]
name = "CarbonAImpact"
version = "1.2"
description = "Monitor the power consumption of a function"
authors = ["Capgemini Invent - Martin Chauvin, Francois Lemeille, Jordan Toh"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
numpy = "^1.20.3"
pandas = "^1.2.4"
requests = "^2.25.1"
fuzzywuzzy = "^0.18.0"
psutil = "^5.8.0"
ipython = "^7.24.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.3"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
black = "^21.5b2"
mypy = "^0.812"
coverage = "^5.5"
coveralls = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
