[tool.poetry]
name = "CarbonAI"
version = "0.2.1"
description = "Monitor the power consumption of a function"
authors = ["Capgemini Invent - Martin Chauvin, Francois Lemeille, Jordan Toh"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/Capgemini-Invent-France/CarbonAI"
documentation = "https://capgemini-invent-france.github.io/CarbonAI/"
keywords = [
    "CarbonAI",
    "energy usage",
    "carbon footprint"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
numpy = ">=1.20.3"
pandas = ">=1.0.5"
requests = ">=2.20.1"
fuzzywuzzy = ">=0.17.0"
psutil = "^>=5.7.0"
ipython = ">=7.12"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.8.3"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
black = "^21.5b2"
mypy = "^0.812"
coverage = "^5.5"
coveralls = "^3.1.0"
isort = ">=5.8"
Sphinx = "^4.0.2"
pydata-sphinx-theme = "^0.6.3"
numpydoc = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79 # override black's default line-length

[tool.isort]
# make it compatible with black
profile = "black"
